src/main/java/edu/uiowa/jopenmm/AmoebaOpenMMLibrary.java

	/**
	 * Original signature : <code>double OpenMM_AmoebaWcaDispersionForce_getEpso(const OpenMM_AmoebaWcaDispersionForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaWcaDispersionForce_getEpso(PointerByReference target);
	/**
	 * Original signature : <code>double OpenMM_AmoebaWcaDispersionForce_getEpsh(const OpenMM_AmoebaWcaDispersionForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaWcaDispersionForce_getEpsh(PointerByReference target);
	/**
	 * Original signature : <code>double OpenMM_AmoebaWcaDispersionForce_getRmino(const OpenMM_AmoebaWcaDispersionForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaWcaDispersionForce_getRmino(PointerByReference target);
	/**
	 * Original signature : <code>double OpenMM_AmoebaWcaDispersionForce_getRminh(const OpenMM_AmoebaWcaDispersionForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaWcaDispersionForce_getRminh(PointerByReference target);
	/**
	 * Original signature : <code>double OpenMM_AmoebaWcaDispersionForce_getAwater(const OpenMM_AmoebaWcaDispersionForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaWcaDispersionForce_getAwater(PointerByReference target);
	/**
	 * Original signature : <code>double OpenMM_AmoebaWcaDispersionForce_getShctd(const OpenMM_AmoebaWcaDispersionForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaWcaDispersionForce_getShctd(PointerByReference target);
	/**
	 * Original signature : <code>double OpenMM_AmoebaWcaDispersionForce_getDispoff(const OpenMM_AmoebaWcaDispersionForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaWcaDispersionForce_getDispoff(PointerByReference target);
	/**
	 * Original signature : <code>double OpenMM_AmoebaWcaDispersionForce_getSlevy(const OpenMM_AmoebaWcaDispersionForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaWcaDispersionForce_getSlevy(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaWcaDispersionForce_setEpso(OpenMM_AmoebaWcaDispersionForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param inputValue a double.
	 */
	public static native void OpenMM_AmoebaWcaDispersionForce_setEpso(PointerByReference target, double inputValue);
	/**
	 * Original signature : <code>void OpenMM_AmoebaWcaDispersionForce_setEpsh(OpenMM_AmoebaWcaDispersionForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param inputValue a double.
	 */
	public static native void OpenMM_AmoebaWcaDispersionForce_setEpsh(PointerByReference target, double inputValue);
	/**
	 * Original signature : <code>void OpenMM_AmoebaWcaDispersionForce_setRmino(OpenMM_AmoebaWcaDispersionForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param inputValue a double.
	 */
	public static native void OpenMM_AmoebaWcaDispersionForce_setRmino(PointerByReference target, double inputValue);
	/**
	 * Original signature : <code>void OpenMM_AmoebaWcaDispersionForce_setRminh(OpenMM_AmoebaWcaDispersionForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param inputValue a double.
	 */
	public static native void OpenMM_AmoebaWcaDispersionForce_setRminh(PointerByReference target, double inputValue);
	/**
	 * Original signature : <code>void OpenMM_AmoebaWcaDispersionForce_setAwater(OpenMM_AmoebaWcaDispersionForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param inputValue a double.
	 */
	public static native void OpenMM_AmoebaWcaDispersionForce_setAwater(PointerByReference target, double inputValue);
	/**
	 * Original signature : <code>void OpenMM_AmoebaWcaDispersionForce_setShctd(OpenMM_AmoebaWcaDispersionForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param inputValue a double.
	 */
	public static native void OpenMM_AmoebaWcaDispersionForce_setShctd(PointerByReference target, double inputValue);
	/**
	 * Original signature : <code>void OpenMM_AmoebaWcaDispersionForce_setDispoff(OpenMM_AmoebaWcaDispersionForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param inputValue a double.
	 */
	public static native void OpenMM_AmoebaWcaDispersionForce_setDispoff(PointerByReference target, double inputValue);
	/**
	 * Original signature : <code>void OpenMM_AmoebaWcaDispersionForce_setSlevy(OpenMM_AmoebaWcaDispersionForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param inputValue a double.
	 */
	public static native void OpenMM_AmoebaWcaDispersionForce_setSlevy(PointerByReference target, double inputValue);
	/**
	 * Original signature : <code>OpenMM_Boolean OpenMM_AmoebaWcaDispersionForce_usesPeriodicBoundaryConditions(const OpenMM_AmoebaWcaDispersionForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaWcaDispersionForce_usesPeriodicBoundaryConditions(PointerByReference target);
	/**
	 * AmoebaInPlaneAngleForce<br>
	 * Original signature : <code>OpenMM_AmoebaInPlaneAngleForce* OpenMM_AmoebaInPlaneAngleForce_create()</code>
	 *
	 * @return a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native PointerByReference OpenMM_AmoebaInPlaneAngleForce_create();
	/**
	 * Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_destroy(OpenMM_AmoebaInPlaneAngleForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 */
	public static native void OpenMM_AmoebaInPlaneAngleForce_destroy(PointerByReference target);
	/**
	 * Original signature : <code>int OpenMM_AmoebaInPlaneAngleForce_getNumAngles(const OpenMM_AmoebaInPlaneAngleForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaInPlaneAngleForce_getNumAngles(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleCubic(OpenMM_AmoebaInPlaneAngleForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param cubicK a double.
	 */
	public static native void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleCubic(PointerByReference target, double cubicK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleCubic(const OpenMM_AmoebaInPlaneAngleForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleCubic(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleQuartic(OpenMM_AmoebaInPlaneAngleForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param quarticK a double.
	 */
	public static native void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleQuartic(PointerByReference target, double quarticK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleQuartic(const OpenMM_AmoebaInPlaneAngleForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleQuartic(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAnglePentic(OpenMM_AmoebaInPlaneAngleForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param penticK a double.
	 */
	public static native void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAnglePentic(PointerByReference target, double penticK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAnglePentic(const OpenMM_AmoebaInPlaneAngleForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAnglePentic(PointerByReference target);
	/**
	 * Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleSextic(OpenMM_AmoebaInPlaneAngleForce*, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param sexticK a double.
	 */
	public static native void OpenMM_AmoebaInPlaneAngleForce_setAmoebaGlobalInPlaneAngleSextic(PointerByReference target, double sexticK);
	/**
	 * Original signature : <code>double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleSextic(const OpenMM_AmoebaInPlaneAngleForce*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @return a double.
	 */
	public static native double OpenMM_AmoebaInPlaneAngleForce_getAmoebaGlobalInPlaneAngleSextic(PointerByReference target);
	/**
	 * Original signature : <code>int OpenMM_AmoebaInPlaneAngleForce_addAngle(OpenMM_AmoebaInPlaneAngleForce*, int, int, int, int, double, double)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param particle1 a int.
	 * @param particle2 a int.
	 * @param particle3 a int.
	 * @param particle4 a int.
	 * @param length a double.
	 * @param quadraticK a double.
	 * @return a int.
	 */
	public static native int OpenMM_AmoebaInPlaneAngleForce_addAngle(PointerByReference target, int particle1, int particle2, int particle3, int particle4, double length, double quadraticK);
	/**
	 * Original signature : <code>void OpenMM_AmoebaInPlaneAngleForce_getAngleParameters(const OpenMM_AmoebaInPlaneAngleForce*, int, int*, int*, int*, int*, double*, double*)</code>
	 *
	 * @param target a {@link com.sun.jna.ptr.PointerByReference} object.
	 * @param index a int.
	 * @param particle1 a {@link java.nio.IntBuffer} object.
	 * @param particle2 a {@link java.nio.IntBuffer} object.
	 * @param particle3 a {@link java.nio.IntBuffer} object.
	 * @param particle4 a {@link java.nio.IntBuffer} object.
	 * @param length a {@link java.nio.DoubleBuffer} object.
	 * @param quadraticK a {@link java.nio.DoubleBuffer} object.
	 */
	public static native void OpenMM_AmoebaInPlaneAngleForce_getAngleParameters(PointerByReference target, int index, IntBuffer particle1, IntBuffer particle2, IntBuffer particle3, IntBuffer particle4, DoubleBuffer length, DoubleBuffer quadraticK);
